Avoid overflow of single line texts in cards - #1

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,14 @@ body {
   background-color: #e3e6e6;
 }
 
+/* TODO: Global classes */
+/* Avoid the overflow of the texts */
+.single-line {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr;
@@ -184,6 +192,12 @@ body {
 }
 
 /* TODO: individual properties*/
+.card--image-with-three-small__title-container {
+  max-width: 316px;
+  max-height: 49px;
+  overflow: hidden;
+}
+
 .card--offer__offer-container {
   cursor: pointer;
 }
